ajout threading mesh

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,8 @@ include_directories ( ${OpenCV_INCLUDE_DIRS} )
 link_directories    (${OpenCV_INCLUDE_DIRS})
 add_definitions     (${OpenCV_INCLUDE_DIRS})
 
-set  (project_SOURCES main.cpp pclacquisition.cpp texture.cpp acquisitionwindows.cpp qlabelimage.cpp cloudwindows.cpp)
-set  (project_HEADERS pclacquisition.h texture.h acquisitionwindows.h qlabelimage.h ASMConvert.h cloudwindows.h)
+set  (project_SOURCES main.cpp pclacquisition.cpp texture.cpp acquisitionwindows.cpp qlabelimage.cpp cloudwindows.cpp texturethread.cpp)
+set  (project_HEADERS pclacquisition.h texture.h acquisitionwindows.h qlabelimage.h ASMConvert.h cloudwindows.h texturethread.h)
 set  (project_FORMS   pclacquisition.ui texture.ui acquisitionwindows.ui cloudwindows.ui)
 set  (VTK_LIBRARIES   vtkRendering vtkGraphics vtkHybrid QVTK)
 
